--- a/package.json
+++ b/package.json
@@ -44,14 +44,23 @@
     ]
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@reach/portal": "^0.11.2",
     "@tailwindcss/ui": "^0.6.2",
+    "@types/react-tabs": "^2.3.2",
     "@vercel/fetch": "^6.1.0",
     "body-scroll-lock": "^3.1.5",
+    "bootstrap": "^4.6.0",
     "bowser": "^2.11.0",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
     "email-validator": "^2.0.4",
+    "graphql-request": "^3.4.0",
     "js-cookie": "^2.2.1",
     "keen-slider": "^5.2.4",
     "lodash.debounce": "^4.0.8",
@@ -62,9 +71,14 @@
     "next-themes": "^0.0.4",
     "postcss-nesting": "^7.0.1",
     "react": "^16.14.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-datocms": "^1.4.7",
     "react-dom": "^16.14.0",
     "react-merge-refs": "^1.1.0",
+    "react-player-pfy": "^1.16.0",
+    "react-tabs": "^3.1.2",
     "react-ticker": "^1.2.2",
+    "reactstrap": "^8.9.0",
     "swr": "^0.4.0",
     "tabbable": "^5.1.5",
     "tailwindcss": "^1.9"
